c3/qsearch
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/qsearch/src/search.c:984:12: error: expected expression
*( _OWORD *)&pv[0][v24 / 3 + v25 / 0x18].from = *( _OWORD *)&v46[v21].from; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/qsearch/src/search.c:984:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&pv[0][v24 / 3 + v25 / 0x18].from = *( _OWORD *)&v46[v21].from; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/qsearch/src/search.c:984:60: error: expected expression
*( _OWORD *)&pv[0][v24 / 3 + v25 / 0x18].from = *( _OWORD *)&v46[v21].from; 
                                                           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/qsearch/src/search.c:984:52: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&pv[0][v24 / 3 + v25 / 0x18].from = *( _OWORD *)&v46[v21].from; 
                                                   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/qsearch/src/search.c:994:12: error: expected expression
*( _OWORD *)&pv[v25 / 0x1C20][v29].from = *( _OWORD *)&pv[0][301 * v26].from; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/qsearch/src/search.c:994:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&pv[v25 / 0x1C20][v29].from = *( _OWORD *)&pv[0][301 * v26].from; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/qsearch/src/search.c:994:54: error: expected expression
*( _OWORD *)&pv[v25 / 0x1C20][v29].from = *( _OWORD *)&pv[0][301 * v26].from; 
                                                     ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/qsearch/src/search.c:994:46: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&pv[v25 / 0x1C20][v29].from = *( _OWORD *)&pv[0][301 * v26].from; 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/qsearch/src/search.c:1004:12: error: expected expression
*( _OWORD *)&v30[v25] = *( _OWORD *)&v30[v31]; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/qsearch/src/search.c:1004:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v30[v25] = *( _OWORD *)&v30[v31]; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/qsearch/src/search.c:1004:36: error: expected expression
*( _OWORD *)&v30[v25] = *( _OWORD *)&v30[v31]; 
                                   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/qsearch/src/search.c:1004:28: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v30[v25] = *( _OWORD *)&v30[v31]; 
                           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/qsearch/src/search.c:1005:12: error: expected expression
*( _OWORD *)&v30[v25 + 24] = *( _OWORD *)&v30[v31 + 24]; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/qsearch/src/search.c:1005:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v30[v25 + 24] = *( _OWORD *)&v30[v31 + 24]; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/qsearch/src/search.c:1005:41: error: expected expression
*( _OWORD *)&v30[v25 + 24] = *( _OWORD *)&v30[v31 + 24]; 
                                        ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/qsearch/src/search.c:1005:33: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v30[v25 + 24] = *( _OWORD *)&v30[v31 + 24]; 
                                ^
16 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/qsearch/src/obj/search.o] Error 1
